Fix missing padding on form buttons

--- a/scriptie/static_files/main.css
+++ b/scriptie/static_files/main.css
@@ -495,6 +495,8 @@ html, body {
   
   margin-left: -1em;
   margin-right: -1em;
+  padding-left: 1em;
+  padding-right: 1em;
   
   padding-top: 0.5em;
   
